--- a/web/templates/page/index.html.eex
+++ b/web/templates/page/index.html.eex
@@ -1,6 +1,18 @@
 <div class="jumbotron">
   <h2><%= gettext "Welcome to %{name}", name: "Phoenix!" %></h2>
   <p class="lead">This text will change dynamically without you having to restart the server or refresh your page!</p>
+  <%= if @conn.assigns[:user] do %>
+    <li class="menu-text">
+      Welcome,!
+    </li>
+     <li>
+      <%= link "Sign out", to: auth_path(@conn, :delete), class: "button alert" %>
+    </li>
+  <% else %>
+    <li>
+     <%= link "Sign in with Google", to: auth_path(@conn, :request, "google", scope: "email profile"), class: "button" %>
+    </li>
+  <% end %>
 </div>
 
 <div class="row marketing">
@@ -8,28 +20,10 @@
     <h4>Resources</h4>
     <ul>
       <li>
-        <a href="http://phoenixframework.org/docs/overview">Guides</a>
+        <span><%= link "Users", to: user_path(@conn, :index) %></span>
       </li>
       <li>
-        <a href="https://hexdocs.pm/phoenix">Docs</a>
-      </li>
-      <li>
-        <a href="https://github.com/phoenixframework/phoenix">Source</a>
-      </li>
-    </ul>
-  </div>
-
-  <div class="col-lg-6">
-    <h4>Help</h4>
-    <ul>
-      <li>
-        <a href="http://groups.google.com/group/phoenix-talk">Mailing list</a>
-      </li>
-      <li>
-        <a href="http://webchat.freenode.net/?channels=elixir-lang">#elixir-lang on freenode IRC</a>
-      </li>
-      <li>
-        <a href="https://twitter.com/elixirphoenix">@elixirphoenix</a>
+        <span><%= link "To Dos", to: todo_path(@conn, :index) %></span>
       </li>
     </ul>
   </div>
